<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sony.jesquiz.MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/r1234"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
     >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/question"
            android:text="@string/text_question"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_below="@+id/r1234"
        android:layout_centerHorizontal="true"
       >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_correct"

            android:id="@+id/correct"
            android:onClick="onCorrectClick" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_incorrect"
            android:id="@+id/incorrect"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/correct"
            android:onClick="onIncorrectClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/next"
            android:onClick="onNextClick"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hint"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="onHintClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cheat"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_alignParentEnd="true"
            android:onClick="onCheatClick" />


    </RelativeLayout>
</RelativeLayout>

