<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sony.jesquiz.Hint_Activity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_view_hint"
            android:id="@+id/hint"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:onClick="onHintView" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hintback"
            android:id="@+id/back"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:onClick="onBackClick" />




    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_hintText"
        android:id="@+id/hinttext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

</RelativeLayout>
